--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SZ CSS Workshop Tailwind</title>
+    <title>SZ: Tailwind vs. CSS Modules</title>
   </head>
   <body class="debug-screens">
     <div id="root"></div>
